# qristal-decoder

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  manifest.json  quantum_decoder.cpp  quantum_decoder_mark2.hpp  ry_encoding.hpp  simplified_decoder.hpp
cmake/: cpm.cmake  tests.cmake
include/: decoder_kernel.hpp  quantum_decoder.hpp  simplified_decoder.hpp
include/qb/decoder/: decoder_kernel.hpp  quantum_decoder.hpp  simplified_decoder.hpp
include/qristal/decoder/: decoder_kernel.hpp  quantum_decoder.hpp  simplified_decoder.hpp
src/: CMakeLists.txt  decoder_kernel.cpp  decoder_plugin_activator.cpp  manifest.json  quantum_decoder.cpp  simplified_decoder.cpp
test/: CMakeLists.txt  QuantumDecoderMark2BuilderTester.cpp  RyEncodingTester.cpp
tests/: CMakeLists.txt  DecoderKernel.cpp  DecoderKernelTester.cpp  QuantumDecoderAlgorithm.cpp  QuantumDecoderAlgorithmTester.cpp  SimplifiedDecoderAlgorithm.cpp  SimplifiedDecoderAlgorithmTester.cpp
